--- a/src/components/Headers/Header.css
+++ b/src/components/Headers/Header.css
@@ -7,10 +7,12 @@
     align-items: right;
     position: sticky;
     top: 0;
+    justify-content: space-between;
+     z-index: 999;
 }
 .college-name {
-    font-size: 1.8em;
-    font-weight: 700;
+    font-size: 2em;
+    font-weight: bold;
     
 }
 .first-nav {
@@ -22,6 +24,13 @@ nav{
     unicode-bidi: isolate;
    
 }
+.nav-item {
+  color: white;
+  text-decoration: none;
+  font-weight: 500;
+  padding: 5px 0;
+  transition: color 0.3s ease, border-bottom 0.3s ease;
+}
 .second-nav {
     position: fixed;
     top: 0;
@@ -32,4 +41,14 @@ nav{
     display: flex;
     flex-direction: column;
     padding-top: 60px;
+}
+.button {
+    background-color: #28a745;
+    font-size: 1.4em;
+    padding: 15px 30px;
+}
+.button a {
+    color: green;
+    cursor: pointer;
+    text-decoration: underline;
 }
