--- a/src/styles/pages.css
+++ b/src/styles/pages.css
@@ -93,6 +93,7 @@ li {
     gap: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
+    grid-template-columns: 1fr;
 }
 .last {
     text-align: center;
